--- a/src/03 Data Modelling - FP Growth - mlxtend.ipynb
+++ b/src/03 Data Modelling - FP Growth - mlxtend.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,12 +72,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored in: <bound method IPythonKernel._clean_thread_parent_frames of <ipykernel.ipkernel.IPythonKernel object at 0x104da6b70>>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/corymills/Develop/cu_boulder/.venv/lib/python3.12/site-packages/ipykernel/ipkernel.py\", line 775, in _clean_thread_parent_frames\n",
+      "    def _clean_thread_parent_frames(\n",
+      "\n",
+      "KeyboardInterrupt: \n"
+     ]
+    }
+   ],
    "source": [
     "# Apply FP-Growth algorithm\n",
-    "frequent_itemsets = fpgrowth(encoded_df, min_support=0.05, use_colnames=True, max_len=5)"
+    "frequent_itemsets = fpgrowth(encoded_df, min_support=0.1, use_colnames=True, max_len=5)"
    ]
   },
   {
