--- a/src/03 Data Modelling - FP Growth - mlxtend.ipynb
+++ b/src/03 Data Modelling - FP Growth - mlxtend.ipynb
@@ -28,30 +28,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with open(\"../data/data_element_details.pkl\", \"rb\") as file:\n",
-    "#     data_element_details = pickle.load(file)"
+    "with open(\"../data/data_element_details.pkl\", \"rb\") as file:\n",
+    "    data_element_details = pickle.load(file)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "\"None of [Index(['What is Primary Source of Health Insurance?',\\n       'Have Personal Health Care Provider?', 'Could Not Afford To See Doctor',\\n       'Length of time since last routine checkup',\\n       'Ever Diagnosed with Heart Attack',\\n       'Ever Diagnosed with Angina or Coronary Heart Disease',\\n       'Ever Diagnosed with a Stroke', 'Ever Told Had Asthma',\\n       'Still Have Asthma',\\n       '(Ever told) (you had) skin cancer that is not melanoma?',\\n       '(Ever told) (you had)  melanoma or any other types of cancer?',\\n       'Ever told you had C.O.P.D. emphysema or chronic bronchitis?',\\n       '(Ever told) you had a depressive disorder',\\n       'Ever told you have kidney disease?', 'Told Had Arthritis',\\n       '(Ever told) you had diabetes'],\\n      dtype='object')] are in the [columns]\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m value[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSection Name\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHealth Care Access\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mChronic Health Conditions\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;129;01mand\u001b[39;00m column_name \u001b[38;5;129;01min\u001b[39;00m df\u001b[38;5;241m.\u001b[39mcolumns:\n\u001b[1;32m      5\u001b[0m         keep_cols\u001b[38;5;241m.\u001b[39mappend(value[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLabel\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m----> 6\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[43mkeep_cols\u001b[49m\u001b[43m]\u001b[49m\n",
+      "File \u001b[0;32m~/Develop/cu_boulder/.venv/lib/python3.12/site-packages/pandas/core/frame.py:4108\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4106\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m is_iterator(key):\n\u001b[1;32m   4107\u001b[0m         key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(key)\n\u001b[0;32m-> 4108\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_indexer_strict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcolumns\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m[\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m   4110\u001b[0m \u001b[38;5;66;03m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[1;32m   4111\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(indexer, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mbool\u001b[39m:\n",
+      "File \u001b[0;32m~/Develop/cu_boulder/.venv/lib/python3.12/site-packages/pandas/core/indexes/base.py:6200\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[0;34m(self, key, axis_name)\u001b[0m\n\u001b[1;32m   6197\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   6198\u001b[0m     keyarr, indexer, new_indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[0;32m-> 6200\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_raise_if_missing\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkeyarr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindexer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   6202\u001b[0m keyarr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtake(indexer)\n\u001b[1;32m   6203\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Index):\n\u001b[1;32m   6204\u001b[0m     \u001b[38;5;66;03m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
+      "File \u001b[0;32m~/Develop/cu_boulder/.venv/lib/python3.12/site-packages/pandas/core/indexes/base.py:6249\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[0;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[1;32m   6247\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m nmissing:\n\u001b[1;32m   6248\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m nmissing \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mlen\u001b[39m(indexer):\n\u001b[0;32m-> 6249\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNone of [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m] are in the [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00maxis_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m   6251\u001b[0m     not_found \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[38;5;241m.\u001b[39mnonzero()[\u001b[38;5;241m0\u001b[39m]]\u001b[38;5;241m.\u001b[39munique())\n\u001b[1;32m   6252\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnot_found\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m not in index\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mKeyError\u001b[0m: \"None of [Index(['What is Primary Source of Health Insurance?',\\n       'Have Personal Health Care Provider?', 'Could Not Afford To See Doctor',\\n       'Length of time since last routine checkup',\\n       'Ever Diagnosed with Heart Attack',\\n       'Ever Diagnosed with Angina or Coronary Heart Disease',\\n       'Ever Diagnosed with a Stroke', 'Ever Told Had Asthma',\\n       'Still Have Asthma',\\n       '(Ever told) (you had) skin cancer that is not melanoma?',\\n       '(Ever told) (you had)  melanoma or any other types of cancer?',\\n       'Ever told you had C.O.P.D. emphysema or chronic bronchitis?',\\n       '(Ever told) you had a depressive disorder',\\n       'Ever told you have kidney disease?', 'Told Had Arthritis',\\n       '(Ever told) you had diabetes'],\\n      dtype='object')] are in the [columns]\""
+     ]
+    }
+   ],
    "source": [
-    "# keep_cols = []\n",
-    "# for value in data_element_details.values():\n",
-    "#     if value['Section Name'] in [\"Health Care Access\", \"Chronic Health Conditions\"] and value['Label'] in df.columns:\n",
-    "#         keep_cols.append(value['Label'])\n",
-    "# df = df[keep_cols]"
+    "keep_cols = []\n",
+    "for value in data_element_details.values():\n",
+    "    column_name = f\"{value['Label']} ({value['SAS Variable Name']})\"\n",
+    "    if value['Section Name'] in [\"Health Care Access\", \"Chronic Health Conditions\"] and column_name in df.columns:\n",
+    "        keep_cols.append(column_name)\n",
+    "df = df[keep_cols]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[categorical_columns]\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df = df[categorical_columns]\n",
     "transactions = []\n",
     "for _, row in df.iterrows():\n",
     "    transaction = [f\"{col}:{val}\" for col, val in zip(df.columns, row) if pd.notna(val) and not col.startswith(\"BLANK\")]\n",
@@ -60,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,22 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception ignored in: <bound method IPythonKernel._clean_thread_parent_frames of <ipykernel.ipkernel.IPythonKernel object at 0x104da6b70>>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/corymills/Develop/cu_boulder/.venv/lib/python3.12/site-packages/ipykernel/ipkernel.py\", line 775, in _clean_thread_parent_frames\n",
-      "    def _clean_thread_parent_frames(\n",
-      "\n",
-      "KeyboardInterrupt: \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Apply FP-Growth algorithm\n",
     "frequent_itemsets = fpgrowth(encoded_df, min_support=0.1, use_colnames=True, max_len=5)"
