--- a/src/03 Data Modelling - FP Growth - mlxtend.ipynb
+++ b/src/03 Data Modelling - FP Growth - mlxtend.ipynb
@@ -237,6 +237,394 @@
     "filtered_rules.to_csv('filtered_rules.csv')\n",
     "len(filtered_rules)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## df_b - Health Care Access & Chronic Conditions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "section_dict = {\n",
+    "    \"Chronic Health Conditions\": [], \n",
+    "    \"Disability\": []\n",
+    "}\n",
+    "\n",
+    "keep_cols = []\n",
+    "for value in data_element_details.values():\n",
+    "    column_name = f\"{value['Label']} ({value['SAS Variable Name']})\"\n",
+    "    if value['Section Name'] in section_dict.keys() and column_name in df.columns:\n",
+    "        for key, valid_values in value['Valid Values'].items():\n",
+    "            v = f\"{column_name}:{key} - {valid_values['Value Label']}\"\n",
+    "            section_dict[value['Section Name']].append( frozenset({v}) )\n",
+    "        keep_cols.append(column_name)\n",
+    "df_b = df[keep_cols]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df = df[categorical_columns]\n",
+    "transactions = []\n",
+    "for _, row in df_b.iterrows():\n",
+    "    transaction = [f\"{col}:{val}\" for col, val in zip(df_b.columns, row) if pd.notna(val) and not col.startswith(\"BLANK\")]\n",
+    "    transactions.append(transaction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encode the transactions\n",
+    "te = TransactionEncoder()\n",
+    "te_ary = te.fit_transform(transactions)\n",
+    "encoded_df = pd.DataFrame(te_ary, columns=te.columns_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply FP-Growth algorithm\n",
+    "frequent_itemsets = fpgrowth(encoded_df, min_support=0.005, use_colnames=True, max_len=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate association rules\n",
+    "rules = association_rules(frequent_itemsets, metric=\"confidence\", min_threshold=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[frozenset({'Are you deaf or do you have serious difficulty hearing? (DEAF):1 - Yes'}),\n",
+       " frozenset({'Are you deaf or do you have serious difficulty hearing? (DEAF):2 - No'}),\n",
+       " frozenset({'Are you deaf or do you have serious difficulty hearing? (DEAF):7 - Don\\x92t know/Not Sure'}),\n",
+       " frozenset({'Are you deaf or do you have serious difficulty hearing? (DEAF):9 - Refused'}),\n",
+       " frozenset({'Are you deaf or do you have serious difficulty hearing? (DEAF):BLANK - Not asked or Missing'}),\n",
+       " frozenset({'Blind or Difficulty seeing (BLIND):1 - Yes'}),\n",
+       " frozenset({'Blind or Difficulty seeing (BLIND):2 - No'}),\n",
+       " frozenset({'Blind or Difficulty seeing (BLIND):7 - Don\\x92t know/Not Sure'}),\n",
+       " frozenset({'Blind or Difficulty seeing (BLIND):9 - Refused'}),\n",
+       " frozenset({'Blind or Difficulty seeing (BLIND):BLANK - Not asked or Missing'}),\n",
+       " frozenset({'Difficulty Concentrating or Remembering (DECIDE):1 - Yes'}),\n",
+       " frozenset({'Difficulty Concentrating or Remembering (DECIDE):2 - No'}),\n",
+       " frozenset({'Difficulty Concentrating or Remembering (DECIDE):7 - Don\\x92t know/Not Sure'}),\n",
+       " frozenset({'Difficulty Concentrating or Remembering (DECIDE):9 - Refused'}),\n",
+       " frozenset({'Difficulty Concentrating or Remembering (DECIDE):BLANK - Not asked or Missing'}),\n",
+       " frozenset({'Difficulty Walking or Climbing Stairs (DIFFWALK):1 - Yes'}),\n",
+       " frozenset({'Difficulty Walking or Climbing Stairs (DIFFWALK):2 - No'}),\n",
+       " frozenset({'Difficulty Walking or Climbing Stairs (DIFFWALK):7 - Don\\x92t know/Not Sure'}),\n",
+       " frozenset({'Difficulty Walking or Climbing Stairs (DIFFWALK):9 - Refused'}),\n",
+       " frozenset({'Difficulty Walking or Climbing Stairs (DIFFWALK):BLANK - Not asked or Missing'}),\n",
+       " frozenset({'Difficulty Dressing or Bathing (DIFFDRES):1 - Yes'}),\n",
+       " frozenset({'Difficulty Dressing or Bathing (DIFFDRES):2 - No'}),\n",
+       " frozenset({'Difficulty Dressing or Bathing (DIFFDRES):7 - Don\\x92t know/Not Sure'}),\n",
+       " frozenset({'Difficulty Dressing or Bathing (DIFFDRES):9 - Refused'}),\n",
+       " frozenset({'Difficulty Dressing or Bathing (DIFFDRES):BLANK - Not asked or Missing'}),\n",
+       " frozenset({'Difficulty Doing Errands Alone (DIFFALON):1 - Yes'}),\n",
+       " frozenset({'Difficulty Doing Errands Alone (DIFFALON):2 - No'}),\n",
+       " frozenset({'Difficulty Doing Errands Alone (DIFFALON):7 - Don\\x92t know/Not Sure'}),\n",
+       " frozenset({'Difficulty Doing Errands Alone (DIFFALON):9 - Refused'}),\n",
+       " frozenset({'Difficulty Doing Errands Alone (DIFFALON):BLANK - Not asked or Missing'})]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "section_dict['Disability']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "disability_list = [\n",
+    "    frozenset({'Are you deaf or do you have serious difficulty hearing? (DEAF):1 - Yes'}),\n",
+    "    frozenset({'Blind or Difficulty seeing (BLIND):1 - Yes'}),\n",
+    "    frozenset({'Difficulty Concentrating or Remembering (DECIDE):1 - Yes'}),\n",
+    "    frozenset({'Difficulty Walking or Climbing Stairs (DIFFWALK):1 - Yes'}),\n",
+    "    frozenset({'Difficulty Dressing or Bathing (DIFFDRES):1 - Yes'}),\n",
+    "    frozenset({'Difficulty Doing Errands Alone (DIFFALON):1 - Yes'}),\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6684"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.set_option('max_colwidth', 400)\n",
+    "filtered_rules = rules[\n",
+    "    rules['antecedents'].apply(lambda x: any(item.issubset(x) for item in disability_list))\n",
+    "    &                 \n",
+    "    (rules['consequents'] == frozenset({'(Ever told) you had a depressive disorder (ADDEPEV3):1 - Yes'}))\n",
+    "    # &\n",
+    "    # (rules['support'] > .1)\n",
+    "].sort_values(\"confidence\", ascending=False)\n",
+    "filtered_rules.to_csv('filtered_rules.csv')\n",
+    "len(filtered_rules)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## df_c - Sexual Orientation and Mental Health"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "section_dict = {\n",
+    "    \"Chronic Health Conditions\": [], \n",
+    "    \"Sexual Orientation and Gender Identity (SOGI)\": []\n",
+    "}\n",
+    "\n",
+    "keep_cols = []\n",
+    "for value in data_element_details.values():\n",
+    "    column_name = f\"{value['Label']} ({value['SAS Variable Name']})\"\n",
+    "    if value['Section Name'] in section_dict.keys() and column_name in df.columns:\n",
+    "        for key, valid_values in value['Valid Values'].items():\n",
+    "            v = f\"{column_name}:{key} - {valid_values['Value Label']}\"\n",
+    "            section_dict[value['Section Name']].append( frozenset({v}) )\n",
+    "        keep_cols.append(column_name)\n",
+    "df_c = df[keep_cols]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df = df[categorical_columns]\n",
+    "transactions = []\n",
+    "for _, row in df_c.iterrows():\n",
+    "    transaction = [f\"{col}:{val}\" for col, val in zip(df_c.columns, row) if pd.notna(val) and not col.startswith(\"BLANK\")]\n",
+    "    transactions.append(transaction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encode the transactions\n",
+    "te = TransactionEncoder()\n",
+    "te_ary = te.fit_transform(transactions)\n",
+    "encoded_df = pd.DataFrame(te_ary, columns=te.columns_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply FP-Growth algorithm\n",
+    "frequent_itemsets = fpgrowth(encoded_df, min_support=0.005, use_colnames=True, max_len=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate association rules\n",
+    "rules = association_rules(frequent_itemsets, metric=\"confidence\", min_threshold=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[frozenset({'Sexual orientation (SOMALE):1 - Gay'}),\n",
+       " frozenset({'Sexual orientation (SOMALE):2 - Straight, that is, not gay'}),\n",
+       " frozenset({'Sexual orientation (SOMALE):3 - Bisexual'}),\n",
+       " frozenset({'Sexual orientation (SOMALE):4 - Something else'}),\n",
+       " frozenset({'Sexual orientation (SOMALE):7 - I don´t know the answer'}),\n",
+       " frozenset({'Sexual orientation (SOMALE):9 - Refused'}),\n",
+       " frozenset({'Sexual orientation (SOMALE):BLANK - Not asked or Missing'}),\n",
+       " frozenset({'Sexual orientation (SOFEMALE):1 - Lesbian or Gay'}),\n",
+       " frozenset({'Sexual orientation (SOFEMALE):2 - Straight, that is, not gay'}),\n",
+       " frozenset({'Sexual orientation (SOFEMALE):3 - Bisexual'}),\n",
+       " frozenset({'Sexual orientation (SOFEMALE):4 - Something else'}),\n",
+       " frozenset({'Sexual orientation (SOFEMALE):7 - I don´t know the answer'}),\n",
+       " frozenset({'Sexual orientation (SOFEMALE):9 - Refused'}),\n",
+       " frozenset({'Sexual orientation (SOFEMALE):BLANK - Not asked or Missing'}),\n",
+       " frozenset({'Do you consider yourself to be transgender? (TRNSGNDR):1 - Yes, Transgender, male-to-female'}),\n",
+       " frozenset({'Do you consider yourself to be transgender? (TRNSGNDR):2 - Yes, Transgender, female to male'}),\n",
+       " frozenset({'Do you consider yourself to be transgender? (TRNSGNDR):3 - Yes, Transgender, gender nonconforming'}),\n",
+       " frozenset({'Do you consider yourself to be transgender? (TRNSGNDR):4 - No'}),\n",
+       " frozenset({'Do you consider yourself to be transgender? (TRNSGNDR):7 - Don\\x92t know/Not Sure'}),\n",
+       " frozenset({'Do you consider yourself to be transgender? (TRNSGNDR):9 - Refused'}),\n",
+       " frozenset({'Do you consider yourself to be transgender? (TRNSGNDR):BLANK - Not asked or Missing'})]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "section_dict['Sexual Orientation and Gender Identity (SOGI)']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "race_list = [\n",
+    "    frozenset({'How do other people usually classify you in this country? (RRCLASS3):2 - Black or African American'})\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5333"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.set_option('max_colwidth', 400)\n",
+    "filtered_rules = rules[\n",
+    "    rules['antecedents'].apply(lambda x: any(item.issubset(x) for item in section_dict['Sexual Orientation and Gender Identity (SOGI)']))\n",
+    "    &                 \n",
+    "    (rules['consequents'] == frozenset({'(Ever told) you had a depressive disorder (ADDEPEV3):1 - Yes'}))\n",
+    "    # &\n",
+    "    # (rules['support'] > .1)\n",
+    "].sort_values(\"confidence\", ascending=False)\n",
+    "filtered_rules.to_csv('filtered_rules.csv')\n",
+    "len(filtered_rules)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>antecedents</th>\n",
+       "      <th>consequents</th>\n",
+       "      <th>antecedent support</th>\n",
+       "      <th>consequent support</th>\n",
+       "      <th>support</th>\n",
+       "      <th>confidence</th>\n",
+       "      <th>lift</th>\n",
+       "      <th>leverage</th>\n",
+       "      <th>conviction</th>\n",
+       "      <th>zhangs_metric</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [antecedents, consequents, antecedent support, consequent support, support, confidence, lift, leverage, conviction, zhangs_metric]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.set_option('max_colwidth', 400)\n",
+    "filtered_rules = rules[\n",
+    "    (rules['antecedents'] == frozenset({'Sexual orientation (SOFEMALE):1 - Lesbian or Gay'}))\n",
+    "    &                 \n",
+    "    (rules['consequents'] == frozenset({'(Ever told) you had a depressive disorder (ADDEPEV3):1 - Yes'}))\n",
+    "    # &\n",
+    "    # (rules['support'] > .1)\n",
+    "].sort_values(\"confidence\", ascending=False)\n",
+    "filtered_rules"
+   ]
   }
  ],
  "metadata": {
