--- a/src/03 Data Modelling - FP Growth - mlxtend.ipynb
+++ b/src/03 Data Modelling - FP Growth - mlxtend.ipynb
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,27 +462,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Apply FP-Growth algorithm\n",
-    "frequent_itemsets = fpgrowth(encoded_df, min_support=0.005, use_colnames=True, max_len=5)"
+    "frequent_itemsets = fpgrowth(encoded_df, min_support=0.0005, use_colnames=True, max_len=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate association rules\n",
-    "rules = association_rules(frequent_itemsets, metric=\"confidence\", min_threshold=0.01)"
+    "rules = association_rules(frequent_itemsets, metric=\"confidence\", min_threshold=0.001)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
        " frozenset({'Do you consider yourself to be transgender? (TRNSGNDR):BLANK - Not asked or Missing'})]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,27 +522,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "race_list = [\n",
-    "    frozenset({'How do other people usually classify you in this country? (RRCLASS3):2 - Black or African American'})\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5333"
+       "17178"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -599,17 +588,38 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4863372</th>\n",
+       "      <td>(Do you consider yourself to be transgender? (TRNSGNDR):3 - Yes, Transgender, gender nonconforming)</td>\n",
+       "      <td>((Ever told) you had a depressive disorder (ADDEPEV3):1 - Yes)</td>\n",
+       "      <td>0.001323</td>\n",
+       "      <td>0.205355</td>\n",
+       "      <td>0.000782</td>\n",
+       "      <td>0.590832</td>\n",
+       "      <td>2.877127</td>\n",
+       "      <td>0.00051</td>\n",
+       "      <td>1.9421</td>\n",
+       "      <td>0.653296</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [antecedents, consequents, antecedent support, consequent support, support, confidence, lift, leverage, conviction, zhangs_metric]\n",
-       "Index: []"
+       "                                                                                                 antecedents  \\\n",
+       "4863372  (Do you consider yourself to be transgender? (TRNSGNDR):3 - Yes, Transgender, gender nonconforming)   \n",
+       "\n",
+       "                                                            consequents  \\\n",
+       "4863372  ((Ever told) you had a depressive disorder (ADDEPEV3):1 - Yes)   \n",
+       "\n",
+       "         antecedent support  consequent support   support  confidence  \\\n",
+       "4863372            0.001323            0.205355  0.000782    0.590832   \n",
+       "\n",
+       "             lift  leverage  conviction  zhangs_metric  \n",
+       "4863372  2.877127   0.00051      1.9421       0.653296  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +627,7 @@
    "source": [
     "pd.set_option('max_colwidth', 400)\n",
     "filtered_rules = rules[\n",
-    "    (rules['antecedents'] == frozenset({'Sexual orientation (SOFEMALE):1 - Lesbian or Gay'}))\n",
+    "    (rules['antecedents'] == frozenset({'Do you consider yourself to be transgender? (TRNSGNDR):3 - Yes, Transgender, gender nonconforming'}))\n",
     "    &                 \n",
     "    (rules['consequents'] == frozenset({'(Ever told) you had a depressive disorder (ADDEPEV3):1 - Yes'}))\n",
     "    # &\n",
